--- a/style.css
+++ b/style.css
@@ -39,3 +39,26 @@ p{
     background-repeat: no-repeat;
     background-position: right;
 }
+.experience-box{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow:10px 10px 30px grey;
+    padding: 20px;
+    border-radius: 10px;
+}
+.exp-pic{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-web-line{
+    border-right: 7px solid;
+    border-image: linear-gradient(salmon,tomato);
+    border-image-slice: 1;
+}
+#baby-web-line{
+    border-right: 7px solid;
+    border-image: linear-gradient(salmon,tomato);
+    border-image-slice: 1;
+}
